<resources>
    <string name="app_name">TestApplication</string>
    <string name="characters_page">Characters</string>
    <string name="episodes_page">Episodes</string>
    <string name="retry">Retry</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="episodes">Episodes</string>
    <string name="check_network">Please check your network connection.</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="view">View</string>
    <string name="like">Like</string>
    <string name="remove">Remove</string>
    <string name="character_name">%s - %d</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="cancel">Cancel</string>
    <string name="floatingactionbutton">floatingActionButton</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="unknown_error">Something went wrong, please try again</string>
    <string name="internet_error">No internet connection, please try again</string>
    <string name="not_found_error">Cannot find any characters, check filters</string>
    <string name="not_up_to_date">Not all data is up-to-date</string>
    <string name="filter_item">filter_item</string>
    <string name="back_button">back_button</string>
    <string name="launcher_foreground">launcher_foreground</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="like_item">Like item</string>
    <string name="remove_item">Remove item</string>
    <string name="delete">Delete</string>
    <string name="snapping_horizontal_recyclerview">Snapping horizontal recyclerView</string>
    <string name="example_button">Example button</string>
    <string name="favorites">Favorites</string>
    <string name="new_item_added">New character(s) added to favorites</string>
    <string name="item_deleted">Character deleted from favorites</string>
    <string name="undo">Undo</string>
    <string name="id">ID</string>
    <string name="episode_count">Episodes: %1$d</string>
    <string-array name="filterStatus">
        <item>All</item>
        <item>Alive </item>
        <item>Dead</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="gender">
        <item>All</item>
        <item>Female</item>
        <item>Male </item>
        <item>Genderless</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="pages">
        <item>Collapsible toolbar</item>
    </string-array>
</resources>