<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/viewListTile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/likeListTile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/faceButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:text="@string/view"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_face" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/likeListTile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/deleteListTile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewListTile">

        <TextView
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:text="@string/like"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_thumb_up" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteListTile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/likeListTile">


        <TextView
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:text="@string/remove"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>